use AsyncChannel for testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 RecingInfo.xcodeproj/xcuserdata/karmjitsingh.xcuserdatad
+.DS_Store
+RacingInfo.xcodeproj/project.xcworkspace/xcuserdata
+RacingInfo.xcodeproj/project.xcworkspace/xcuserdata/karmjitsingh.xcuserdatad/UserInterfaceState.xcuserstate
+RacingInfo.xcodeproj/project.xcworkspace
