added accessibility labels

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ RecingInfo.xcodeproj/xcuserdata/karmjitsingh.xcuserdatad
 RacingInfo.xcodeproj/project.xcworkspace/xcuserdata
 RacingInfo.xcodeproj/project.xcworkspace/xcuserdata/karmjitsingh.xcuserdatad/UserInterfaceState.xcuserstate
 RacingInfo.xcodeproj/project.xcworkspace
+RacingInfo.xcodeproj/project.xcworkspace/xcuserdata/karmjitsingh.xcuserdatad
